--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ header {
     width: 375px;
     margin: 0 auto;
     padding: 10px 0;
-    border-bottom: 1px solid #c4c4c4;
 }
 
 .logo {
@@ -29,12 +28,14 @@ header {
 .container {
     width: 375px;
     margin: 0 auto;
+    border-top: 1px solid #c4c4c4;
 }
 
 .post-header {
     display: flex;
     justify-content: left;
     align-items: center;
+    padding: 10px 0;
 }
 
 h2 {
